hack/deploy/operator.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: stash-operator
  namespace: ${STASH_NAMESPACE}
  labels:
    app: stash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stash
  template:
    metadata:
      labels:
        app: stash
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      serviceAccountName: ${STASH_SERVICE_ACCOUNT}
      imagePullSecrets: [${STASH_IMAGE_PULL_SECRET}]
      containers:
      - name: operator
        args:
        - run
        - --v=3
        - --rbac=${STASH_ENABLE_RBAC}
        - --docker-registry=${STASH_DOCKER_REGISTRY}
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --enable-analytics=${STASH_ENABLE_ANALYTICS}
        image: ${STASH_DOCKER_REGISTRY}/stash:delete-repo
        ports:
        - containerPort: 8443
        - containerPort: 56790
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
      - name: pushgateway
        args:
        - -web.listen-address=:56789
        - -persistence.file=/var/pv/pushgateway.dat
        image: prom/pushgateway:v0.4.0
        ports:
        - containerPort: 56789
          name: pushgateway
          protocol: TCP
        volumeMounts:
        - mountPath: /var/pv
          name: data-volume
        - mountPath: /tmp
          name: stash-scratchdir
      volumes:
      - emptyDir: {}
        name: data-volume
      - emptyDir: {}
        name: stash-scratchdir
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: stash-apiserver-cert
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
---
# to be able to expose TSB inside the cluster
apiVersion: v1
kind: Service
metadata:
  name: stash-operator
  namespace: ${STASH_NAMESPACE}
  labels:
    app: stash
spec:
  ports:
  - name: admission
    port: 443
    targetPort: 8443
  - name: pushgateway
    port: 56789
    targetPort: 56789
  - name: ops
    port: 56790
    targetPort: 56790
  selector:
    app: stash
